js/js.translator/testData/incremental/invalidation/functionTypeInterfaceReflect/lib1/A.0.kt
object A {
    public fun testFunction() { }
}
